fixing Projects and OverFlow Issue

--- a/src/components/project-left/project-left.style.scss
+++ b/src/components/project-left/project-left.style.scss
@@ -8,14 +8,33 @@
         height: 100%;
         width: 50%;
         text-align: left;
+        font-size: 1.1em;
+
+        .linkTitle {
+            float: left;
+            padding-left: 20px;
+        }
+
+
+        .githubIcon {
+            height: 30px;
+            padding: 15px;
+            padding-top: 10px;
+        }
     }
 }
 
 .p-image {
-    background-color: var(--color2);
+    background-color: var(--color4);
     width: 45%;
     height: 300px;
-    border-radius: 20px;
+    border-radius: 24px;
+
+    .projectImage {
+        width: 100%;
+        height: 100%;
+        border-radius: 20px;
+    }
 
 }
 
@@ -33,9 +52,12 @@
         padding: 10px;
         font-family: 'Dongle', sans-serif;
         font-size: 22px;
+        overflow: hidden;
+        word-wrap: break-word;
 
         .p {
             padding-left: 20px;
+
         }
     }
 
