--- a/src/containers/homeContact/homeContact.style.scss
+++ b/src/containers/homeContact/homeContact.style.scss
@@ -12,6 +12,10 @@
     color: white;
     font-family: 'Dongle', sans-serif;
     font-size: 24px;
+
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .homeContact {
